# Flutter_Head-Unit

./: pubspec.yaml
lib/: main.dart
lib/components/: app_drawer.dart  favorites.dart  gear_selection.dart  navbar.dart  time.dart
lib/ffi/vsomeip/: CMakeLists.txt
lib/ffi/vsomeip/include/: defines.hpp  structs.hpp
lib/ffi/vsomeip/src/: vsomeip.cpp
lib/icons/: apple-contact.dart  apple-map.dart  apple-music.dart  apple-phone.dart  apple-photos.dart  apple-safari.dart  apple-settings.dart  apple-weather.dart  homebutton.dart
lib/provider/: app_controller.dart  vsomeip.dart
lib/ui/: gear_selection.dart
linux/: CMakeLists.txt  libs
